<resources>
    <string name="app_name">SoftNotes</string>
    <string name="welcome_text">Welcome to SoftNotes\n Share\n Upload N Download</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="login_to_softnotes">Login to SoftNotes</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="empty_name">First name cannot be empty!!!</string>
    <string name="space_error_first_name">No spaces allowed in First name!!!</string>
    <string name="empty_last_name">Last Name cannot be empty!!!</string>
    <string name="space_error_last_name">No spaces allowed in Last name!!!</string>
    <string name="empty_password">Password cannot be empty!!!</string>
    <string name="small_password">Password should be at least 6 digits long!!!</string>
    <string name="invalid_email">Invalid email!!!</string>
    <string name="password_mismatch_error">Password doesn\'t match with the previous one!!!</string>
    <string name="check_internet_msg">Please check your internet connectivity!!!</string>
    <string name="login_fields_empty">Email or Password cannot be empty!!!</string>
    <string name="email">Email</string>
    <string name="first_name_question">What is your first name?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_question">What is your family/last name?</string>
    <string name="email_question">Please provide a valid Email</string>
    <string name="password_question">You will need a secure password</string>
    <string name="confirm_password_question">Please Re-enter password to confirm</string>
    <string name="confirm_password">Confirm password</string>
    <string name="find_account">Find your account at SoftNotes</string>
    <string name="submit">Submit</string>
    <string name="pass_reset_email_success">Email sent successfully!!! Please check your inbox to reset password.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="softnotes">SoftNotes</string>
    <string name="zero">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_your_profile">EDIT YOUR PROFILE</string>
    <string name="uploads">Uploads</string>
    <string name="no_uploads">You haven\'t uploaded anything yet…!!!\nNothing to show…!!!</string>
    <string name="document_upload_successful">Document Uploaded Successfully</string>
    <string name="permission_denied">Need permission to proceed further!!!</string>
    <string name="title">Title</string>
    <string name="get_title_head">Add Title To Your Upload</string>
    <string name="empty_title_error">Title cannot be empty!!!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_image">Change Image</string>
    <string name="personal_information">Personal Information</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date Of Birth</string>
    <string name="dob_default">DD/MM/YYYY</string>
    <string name="contact_information">Contact Information</string>
    <string name="phone_number">Enter phone number</string>
    <string name="enter_college_name">Enter college name</string>
    <string name="phone_number_error">Invalid Phone Number</string>
    <string name="data_update_success">Data updated successfully</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="cancel">Cancel</string>
    <string name="change_photo_head">Change Photo!!!</string>
    <string name="removal_success">Item Removed Successfully!!!</string>
    <string name="are_you_sure">You sure? You want to delete this ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share_using">Share Using</string>
    <string name="share_msg_body">Tired of copying notes the old way ? Download SoftNotes here: ***link*** and share notes over internet</string>
    <string name="share_subject">SoftNotes Invitation</string>
    <string name="opening_market">Opening market</string>
    <string name="help_msg">Sorry !!! Cannot help you at the movement…!!!</string>
    <string name="mailto">mailto:</string>
    <string name="mail_subject">This was sent from App</string>
    <string name="extra_text_mail">Type your queries here…!!! We\'ll get back to you as soon as we can…!!!THANKS !!! </string>
    <string name="email_via">Send Email Via</string>
    <string name="enter_at_least_3_characters_to_get_search_results">Enter at least 3 characters to get search results!!!</string>
    <string name="no_results">There are no results matching to your search!!!</string>
    <string name="college_name">College/School name : </string>
    <string name="follow">Follow</string>
    <string name="date_of_birth">Date of birth -</string>
    <string name="gender_">Gender -</string>
    <string name="college">College -</string>
    <string name="phone_number_">Phone No -</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rate_us">Rate us</string>
    <string name="help">Help</string>
    <string name="write_to_us">Write to us</string>
    <string name="logout">Logout</string>
    <string name="no_uploads_other">The Person hasn\'t uploaded anything yet!!!\n\n Please check back later</string>
    <string name="not_mentioned">Not Mentioned</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="old_password_error">Old password cannot be empty or less than 6 digits!!!</string>
    <string name="new_password_error">New password cannot be empty or less than 6 digits!!!</string>
    <string name="confirm_password_error">Confirm password field cannot be empty or less than 6 digits!!!</string>
    <string name="password_doesnot_match_error">New Passwords doesn\'t match!!! Please check</string>
    <string name="password_updated_success">Password updated successfully</string>
    <string name="password_updated_error">Password wasn\'t updated!!! Please try again later</string>
    <string name="password_updated_error_login">Email Id or password was incorrect!!!</string>
    <string name="unFollow">Unfollow</string>
    <string name="uploaded_a_file">uploaded a file recently</string>
    <string name="named">Named- </string>
    <string name="dot">.</string>
    <string name="no_activity">There are no uploads by your connections or you might not be following anybody!!!\n \n Please do the needful</string>
    <string name="no_connection">You don\'t have any connections!!!\n\n Please start to follow someone</string>
</resources>