<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <View
        android:id="@+id/toolbar_view"
        android:layout_width="@dimen/dp_0"
        android:layout_height="?android:actionBarSize"
        android:layout_marginTop="@dimen/dp_2"
        android:background="@color/white"
        android:elevation="@dimen/dp_3"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_0"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:elevation="@dimen/dp_4"
        android:paddingVertical="@dimen/dp_6"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar_view"
        tools:text="Full Name" />


    <TextView
        android:id="@+id/btn_follow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@color/primary4"
        android:elevation="@dimen/dp_4"
        android:paddingHorizontal="@dimen/dp_40"
        android:paddingVertical="@dimen/dp_8"
        android:text="@string/follow"
        android:textColor="@color/primary1"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="@id/toolbar_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar_view" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_display_picture"
        android:layout_width="@dimen/dp_110"
        android:layout_height="@dimen/dp_110"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@drawable/placeholder"
        app:layout_constraintEnd_toStartOf="@id/guideline_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_view" />

    <TextView
        android:id="@+id/tv_followers_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideline_two"
        app:layout_constraintStart_toEndOf="@id/guideline_one"
        app:layout_constraintTop_toTopOf="@id/civ_display_picture" />

    <TextView
        android:id="@+id/tv_followers_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/followers"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toStartOf="@id/guideline_two"
        app:layout_constraintStart_toEndOf="@id/guideline_one"
        app:layout_constraintTop_toBottomOf="@id/tv_followers_count" />

    <TextView
        android:id="@+id/tv_following_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_2"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_two"
        app:layout_constraintTop_toTopOf="@id/civ_display_picture" />

    <TextView
        android:id="@+id/tv_following_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/following"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_two"
        app:layout_constraintTop_toBottomOf="@id/tv_following_count" />

    <View
        android:id="@+id/separator_vertical"
        android:layout_width="@dimen/dp_1"
        android:layout_height="@dimen/dp_0"
        android:layout_marginVertical="@dimen/dp_6"
        android:background="@color/shadow"
        app:layout_constraintBottom_toBottomOf="@id/tv_followers_txt"
        app:layout_constraintEnd_toEndOf="@id/guideline_two"
        app:layout_constraintStart_toStartOf="@id/guideline_two"
        app:layout_constraintTop_toTopOf="@id/tv_followers_count" />

    <View
        android:id="@+id/separator_horizontal"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_1"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/shadow"
        app:layout_constraintEnd_toEndOf="@id/tv_following_txt"
        app:layout_constraintStart_toStartOf="@id/tv_followers_txt"
        app:layout_constraintTop_toBottomOf="@id/separator_vertical" />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/civ_display_picture"
        tools:text="Shubham Behal" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_4"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_10"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="( abc@domain.com )" />

    <TextView
        android:id="@+id/tv_dob_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/date_of_birth"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_one"
        app:layout_constraintTop_toBottomOf="@id/separator_horizontal" />

    <TextView
        android:id="@+id/tv_dob_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/tv_dob_txt"
        app:layout_constraintTop_toTopOf="@id/tv_dob_txt"
        tools:text="@string/dob_default" />

    <TextView
        android:id="@+id/tv_gender_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_2"
        android:text="@string/gender_"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_one"
        app:layout_constraintTop_toBottomOf="@id/tv_dob_txt" />

    <TextView
        android:id="@+id/tv_gender_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/tv_gender_txt"
        app:layout_constraintTop_toTopOf="@id/tv_gender_txt"
        tools:text="Male" />

    <TextView
        android:id="@+id/tv_college_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_2"
        android:text="@string/college"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_one"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_txt" />

    <TextView
        android:id="@+id/tv_college_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/tv_college_txt"
        app:layout_constraintTop_toTopOf="@id/tv_college_txt"
        tools:text="Lambton College" />

    <TextView
        android:id="@+id/tv_phone_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_2"
        android:text="@string/phone_number_"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_one"
        app:layout_constraintTop_toBottomOf="@id/tv_college_txt" />

    <TextView
        android:id="@+id/tv_phone_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_14"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/tv_phone_txt"
        app:layout_constraintTop_toTopOf="@id/tv_phone_txt"
        tools:text="6478704775" />

    <View
        android:id="@+id/separator_big"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_1"
        android:layout_marginHorizontal="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_value" />


    <TextView
        android:id="@+id/tv_uploads_head"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_14"
        android:layout_marginTop="@dimen/dp_10"
        android:elevation="@dimen/dp_4"
        android:text="@string/uploads"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_big" />

    <TextView
        android:id="@+id/tv_uploads_count"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_30"
        android:gravity="center_vertical"
        android:text="@string/zero"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_uploads_head" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_uploads"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_10"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_uploads_head"
        app:spanCount="3"
        tools:itemCount="1"
        tools:listitem="@layout/uploads_child_view" />

    <TextView
        android:id="@+id/tv_no_uploads"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_10"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/dp_4"
        android:text="@string/no_uploads_other"
        android:textSize="@dimen/sp_20"
        android:textStyle="italic"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_uploads_head" />

</androidx.constraintlayout.widget.ConstraintLayout>